--- a/src/devtools/client/locales/en-us/toolbox.properties
+++ b/src/devtools/client/locales/en-us/toolbox.properties
@@ -264,7 +264,25 @@ options.deprecationNotice=Deprecated. Learn More…
 # settings panel for the checkbox that enables the Multiprocess Browser Toolbox.
 options.enableMultiProcessToolbox=Enable the Multiprocess Browser Toolbox (requires restarting the Browser Toolbox)
 
-toolbox.replay.previous=Previous
-toolbox.replay.next=Next
-toolbox.replay.play=Play
-toolbox.replay.zoomout=Zoom Out
+# LOCALIZATION NOTE (toolbox.replay.jumpMessage2): This is the label
+# shown in the web replay timeline marker
+toolbox.replay.jumpMessage2=Jump to %1$S
+
+# LOCALIZATION NOTE (toolbox.replay.resume): This is the text that appears in the
+# Replay command bar to prompt the user to resume the program.
+toolbox.replay.resume=Resume
+
+# LOCALIZATION NOTE (toolbox.replay.rewind): This is the text that appears in the
+# Replay command bar to prompt the user to rewind the program.
+toolbox.replay.rewind=Rewind
+
+# LOCALIZATION NOTE (toolbox.replay.pause): This is the text that appears in the
+# Replay command bar to prompt the user to pause the program.
+toolbox.replay.pause=Pause
+
+toolbox.replay.play=Play Recording
+toolbox.replay.previous=Previous Frame
+toolbox.replay.next=Next Frame
+toolbox.replay.zoomout=Zoom Out (Drag on timeline to zoom in)
+toolbox.replay.zoomBoundaryStart=Zoomed Region Start
+toolbox.replay.zoomBoundaryEnd=Zoomed Region End
