Support searching for a file

--- a/src/devtools/client/locales/en-us/debugger.properties
+++ b/src/devtools/client/locales/en-us/debugger.properties
@@ -767,6 +767,11 @@ symbolSearch.search.functionsPlaceholder.title=Search for a function in a file
 symbolSearch.search.variablesPlaceholder=Search variables…
 symbolSearch.search.variablesPlaceholder.title=Search for a variable in a file
 
+# LOCALIZATION NOTE(symbolSearch.search.key1): The Key Shortcut for
+# searching for a file
+symbolSearch.search.key1=CmdOrCtrl+Shift+P
+
+
 # LOCALIZATION NOTE(symbolSearch.search.key2): The Key Shortcut for
 # searching for a function or variable
 # Do not localize "CmdOrCtrl+Shift+O", or change the format of the string. These are
