Fix appearance of debugger secondary panes

--- a/src/devtools/client/locales/en-us/debugger.properties
+++ b/src/devtools/client/locales/en-us/debugger.properties
@@ -160,7 +160,7 @@ noSourcesText=This page has no sources.
 
 # LOCALIZATION NOTE (eventListenersHeader1): The text to display in the events
 # header.
-eventListenersHeader1=Event Listener Breakpoints
+eventListenersHeader1=Event Listener Logpoints
 
 # LOCALIZATION NOTE (noDomMutationBreakpoints): The text to
 # display in the DOM Mutation Breakpoints pane when there are no events.
