Support logpoints on thrown exceptions

--- a/src/devtools/client/locales/en-us/debugger.properties
+++ b/src/devtools/client/locales/en-us/debugger.properties
@@ -139,14 +139,6 @@ skipPausingTooltip.label=Deactivate breakpoints
 # breakpoints and pausing triggers
 undoSkipPausingTooltip.label=Activate breakpoints
 
-# LOCALIZATION NOTE (pauseOnExceptionsItem2): The pause on exceptions checkbox description
-# when the debugger will pause on all exceptions.
-pauseOnExceptionsItem2=Pause on exceptions
-
-# LOCALIZATION NOTE (pauseOnCaughtExceptionsItem): The pause on exceptions checkbox description
-# when the debugger should pause on caught exceptions
-pauseOnCaughtExceptionsItem=Pause on caught exceptions
-
 # LOCALIZATION NOTE (threadsHeader): The text to describe the threads header
 threadsHeader=Threads
 
@@ -726,9 +718,9 @@ sourceSearch.search=Search sources…
 # prompt for searching for files.
 sourceSearch.search2=Go to file…
 
-# LOCALIZATION NOTE (pauseOnExceptions): The pause on exceptions button tooltip
-# when the debugger will pause on all exceptions.
-pauseOnExceptions=Pause on all exceptions. Click to ignore exceptions
+# LOCALIZATION NOTE (logExceptionsItem): The button label when exceptions will
+# be logged by the debugger.
+logExceptionsItem=Log exceptions
 
 # LOCALIZATION NOTE (loadingText): The text that is displayed in the script
 # editor when the loading process has started but there is no file to display
