WIP for supporting switching between original/generated sources

--- a/src/devtools/client/locales/en-us/debugger.properties
+++ b/src/devtools/client/locales/en-us/debugger.properties
@@ -597,13 +597,20 @@ blackboxContextItem.blackbox.accesskey=B
 blackboxContextItem.unblackbox=Unblackbox source
 blackboxContextItem.unblackbox.accesskey=U
 
-# LOCALIZATION NOTE (sourceFooter.mappedSource): Text associated
-# with a mapped source. %S is replaced by the source map origin.
-sourceFooter.mappedSource=(From %S)
+# LOCALIZATION NOTE (sourceFooter.alternateSource): Text associated
+# with showing a source with an alternate generated/original source.
+# %S is replaced by the alternate source name.
+sourceFooter.alternateSource=(Switch to %S)
 
-# LOCALIZATION NOTE (sourceFooter.mappedSourceTooltip): Tooltip text associated
-# with a mapped source. %S is replaced by the source map origin.
-sourceFooter.mappedSourceTooltip=(Source mapped from %S)
+# LOCALIZATION NOTE (sourceFooter.generatedSourceTooltip): Tooltip text associated
+# with showing an alterate generated source. %S is replaced by the generated
+# source name.
+sourceFooter.generatedSourceTooltip=(Source mapped from %S)
+
+# LOCALIZATION NOTE (sourceFooter.originalSourceTooltip): Tooltip text associated
+# with showing an alterate original source. %S is replaced by the original
+# source name.
+sourceFooter.originalSourceTooltip=(Generated from %S)
 
 # LOCALIZATION NOTE (sourceFooter.mappedSuffix): Text associated
 # with a mapped source.  Displays next to URLs in tree and tabs.
