--- a/src/devtools/client/locales/en-us/toolbox.properties
+++ b/src/devtools/client/locales/en-us/toolbox.properties
@@ -265,7 +265,7 @@ options.deprecationNotice=Deprecated. Learn More…
 options.enableMultiProcessToolbox=Enable the Multiprocess Browser Toolbox (requires restarting the Browser Toolbox)
 
 # LOCALIZATION NOTE (toolbox.replay.jumpMessage2): This is the label
-# shown in the web replay timeline marker
+# shown in the timeline marker
 toolbox.replay.jumpMessage2=Jump to %1$S
 
 # LOCALIZATION NOTE (toolbox.replay.resume): This is the text that appears in the
