--- a/src/devtools/client/locales/en-us/webconsole.properties
+++ b/src/devtools/client/locales/en-us/webconsole.properties
@@ -235,8 +235,8 @@ webconsole.menu.timeWarp.label=Jump here
 
 # LOCALIZATION NOTE (webconsole.jumpButton.tooltip)
 # Label used for the tooltip on the "jump" button in the console. It's displayed when
-# the user recorded execution with WebReplay, is now paused in the debugger, and hover a
-# message in the console output. Clicking on it will jump to the execution point where the
+# the user hovers over a message in the console output.
+# Clicking on it will jump to the execution point where the
 # log item was generated.
 # Parameters: %S is the level of the message.
 webconsole.jumpButton.tooltip=%S - Jump here
