--- a/src/devtools/client/locales/en-us/toolbox.properties
+++ b/src/devtools/client/locales/en-us/toolbox.properties
@@ -286,3 +286,4 @@ toolbox.replay.next=Next Frame
 toolbox.replay.zoomout=Zoom Out (Drag on timeline to zoom in)
 toolbox.replay.zoomBoundaryStart=Zoomed Region Start
 toolbox.replay.zoomBoundaryEnd=Zoomed Region End
+toolbox.replay.comment=Add Comment
