Added console filtering from node_modules

--- a/src/devtools/client/locales/en-us/webconsole.properties
+++ b/src/devtools/client/locales/en-us/webconsole.properties
@@ -343,6 +343,12 @@ webconsole.console.settings.menu.item.warningGroups.label=Group Similar Messages
 # LOCALIZATION NOTE (webconsole.console.settings.menu.item.warningGroups.tooltip)
 webconsole.console.settings.menu.item.warningGroups.tooltip=When enabled, similar messages are placed into groups
 
+# LOCALIZATION NOTE (webconsole.console.settings.menu.item.nodeModuleMessages.label)
+# Label for grouping the similar messages in the Web Console
+webconsole.console.settings.menu.item.nodeModuleMessages.label=Hide Node Module Messages
+# LOCALIZATION NOTE (webconsole.console.settings.menu.item.nodeModuleMessages.tooltip)
+webconsole.console.settings.menu.item.nodeModuleMessages.tooltip=While enabled, messages from the node_modules directory are hidden
+
 # LOCALIZATION NOTE (webconsole.console.settings.menu.item.autocomplete.label)
 # Label for enabling autocomplete for input in the Web Console
 webconsole.console.settings.menu.item.autocomplete.label=Enable Autocompletion
