Fix missing locale

--- a/src/devtools/client/locales/en-us/debugger.properties
+++ b/src/devtools/client/locales/en-us/debugger.properties
@@ -387,6 +387,12 @@ callStack.group.collapseTooltip=Collapse %S frames
 # Editor Search bar message to summarize the selected search result. e.g. 5 of 10 results.
 editor.searchResults1=%d of #1 result;%d of #1 results
 
+
+# LOCALIZATION NOTE (editor.resultsSummary1): Semi-colon list of plural forms.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# Editor Search bar message to summarize the selected search result. e.g. 5 of 10 results.
+sourceSearch.resultsSummary1=#1 result;#1 results
+
 # LOCALIZATION NOTE (editor.noResultsFound): Editor Search bar message
 # for when no results found.
 editor.noResultsFound=No results found
