Removed context menu for breakpoints in the Editor

--- a/src/devtools/client/locales/en-us/debugger.properties
+++ b/src/devtools/client/locales/en-us/debugger.properties
@@ -302,6 +302,8 @@ breakpointMenuItem.disableSelf2.label=Disable
 breakpointMenuItem.disableSelf2.accesskey=D
 breakpointMenuItem.deleteSelf2.label=Remove
 breakpointMenuItem.deleteSelf2.accesskey=R
+breakpointMenuItem.disabledbg.label=Never pause here
+breakpointMenuItem.enabledbg.label=Pause here
 breakpointMenuItem.enableOthers2.label=Enable others
 breakpointMenuItem.enableOthers2.accesskey=o
 breakpointMenuItem.disableOthers2.label=Disable others
@@ -396,6 +398,22 @@ editor.searchResults.nextResult=Next result
 # LOCALIZATION NOTE (editor.searchResults.prevResult): Editor Search bar
 # tooltip for traversing to the Previous Result
 editor.searchResults.prevResult=Previous result
+
+# LOCALIZATION NOTE (editor.addLogPoint): Editor gutter context
+# menu item for adding a log point on a line.
+editor.addLogPoint=Add log
+editor.addLogPoint.accesskey=l
+
+
+# LOCALIZATION NOTE (editor.editLogPoint): Editor gutter context menu item
+# for editing a log point already set on a line.
+editor.editLogPoint=Edit log
+editor.editLogPoint.accesskey=E
+
+# LOCALIZATION NOTE (editor.removeLogPoint): Context menu item for removing
+# a log point on a line.
+editor.removeLogPoint.label=Remove log
+editor.removeLogPoint.accesskey=V
 
 # LOCALIZATION NOTE (editor.conditionalPanel.placeholder2): Placeholder text for
 # input element inside ConditionalPanel component
