Add back continue to here

--- a/src/devtools/client/locales/en-us/debugger.properties
+++ b/src/devtools/client/locales/en-us/debugger.properties
@@ -399,6 +399,11 @@ editor.searchResults.nextResult=Next result
 # tooltip for traversing to the Previous Result
 editor.searchResults.prevResult=Previous result
 
+# LOCALIZATION NOTE (editor.continueToHere.label): Editor gutter context
+# menu item for jumping to a new paused location
+editor.continueToHere.label=Continue to here
+editor.continueToHere.accesskey=H
+
 # LOCALIZATION NOTE (editor.addLogPoint): Editor gutter context
 # menu item for adding a log point on a line.
 editor.addLogPoint=Add log
