--- a/src/devtools/shared/locales/en-US/styleinspector.properties
+++ b/src/devtools/shared/locales/en-US/styleinspector.properties
@@ -69,6 +69,10 @@ rule.filterProperty.title=Filter rules containing this property
 # first opened and there's no node selected in the rule view.
 rule.empty=No element selected.
 
+# LOCALIZATION NOTE (rule.notAvailable): Text displayed when the applied
+# rules could not be loaded from the backend.
+rule.notAvailable=Rules not available.
+
 # LOCALIZATION NOTE (rule.variableValue): Text displayed in a tooltip
 # when the mouse is over a variable use (like "var(--something)") in
 # the rule view.  The first argument is the variable name and the
